# MIBC

./: .gitignore  BilateralFusion.py  MNet.py  SideInvariantFusion.py  cross_atten.py  dataloader.py  environment.yml  main.py  model.py  nyu_layers.py  preprocess.py  pyproject.toml  train.sh  utils.py
csv/three_classes/: test_labels.csv  train_labels.csv  val_labels.csv
