[project]
name = "mission-impossible-birads"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "argparse>=1.4.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
